syntax = "proto3";

option go_package = "arduino/hello";
option java_multiple_files = true;
option java_package = "io.arduino.client";
option java_outer_classname = "ArduinoProto";

package arduino;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}

  rpc SayHelloAgain(HelloRequest) returns (HelloReply) {}
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}
