syntax = "proto3";

option go_package = "h2pcontrol.manager";
option java_multiple_files = true;
option java_package = "io.h2pcontrol.client";
option java_outer_classname = "h2pcontrol";

package h2pcontrol;


service Manager {
  rpc GetStub(StubRequest) returns (StubResponse);
  rpc RegisterServer(RegisterRequest) returns (RegisterResponse);
  rpc Heartbeat(Empty) returns (HeartbeatPong);

  rpc FetchServers(Empty) returns (FetchServersResponse);
  rpc FetchSpecificServer(FetchSpecificServerRequest) returns (FetchSpecificServerResponse);
}

message Empty {}


message HeartbeatPong {
  bool healthy = 1;
}

message ServerDefinition {
  string server_name = 1;
  string port = 2;
  string version = 3;
  repeated File proto_files = 4;
}


message RegisterRequest {
  ServerDefinition server = 1;
}

message RegisterResponse {
  string result = 1;
}

message FetchServerDefinition {
  string name = 1;
  string description = 2;
  string addr = 3;
}

message FetchServersResponse {
  repeated FetchServerDefinition servers = 1; 
}

message FetchSpecificServerRequest {
  string addr = 1;
}

message FetchSpecificServerResponse {
  FetchServerDefinition server_definition = 1;
  string proto = 2;
}



message StubRequest {
  string Server_name = 1;
  string version = 2;
  string language = 3; // e.g., "python", "java"
}


message StubResponse {
  string name = 1;
  bytes zip_data = 2;
  string checksum = 3;  // Optional checksum (e.g., SHA256)
}

message File {
  string name = 1;
  bytes content = 2;
}

